syntax = "proto3";

option go_package = "./proto";

import "google/protobuf/struct.proto";

package myservice;

service MyService {
    rpc ProcessJSON(Request) returns (Array);
}

message Request {
    string json_data = 1;
}

message Response {
    map<string, google.protobuf.Value> result_map = 1;
}

message Array {
    repeated Response Msg = 1;
}
